--- a/pizza-project/src/Components/HomePage.css
+++ b/pizza-project/src/Components/HomePage.css
@@ -33,6 +33,17 @@
 .tek-food {
   margin-bottom: 2rem;
 }
+#div-h1 {
+  text-align: left;
+  font-family: var(--quattrocento-font);
+  font-size: 4rem;
+  font-weight: 500;
+}
+#div-h4 {
+  justify-content: flex-start;
+  width: 100%;
+  font-size: 1.1rem;
+}
 .banner-text h1 {
   font-family: var(--barlow-font);
   font-weight: 400;
@@ -54,6 +65,10 @@
   background: var(--beige-color);
 }
 /*! Buton */
+#order-btn1 {
+  display: flex;
+  margin-top: 1rem;
+}
 .order-btn {
   background: var(--beige-color);
   color: var(--red-color);
@@ -112,6 +127,14 @@
   padding-left: 2rem;
   color: white;
 }
+.order-div2-text h2 {
+  text-align: left;
+  font-weight: 700;
+}
+#order-btn2 {
+  display: flex;
+  margin-top: 1rem;
+}
 .order-div2-1-img {
   border-radius: 1rem;
 }
@@ -127,11 +150,20 @@
   color: white;
   color: var(--dark-color);
 }
+.order-div2-2-text h2 {
+  display: flex;
+  font-weight: 700;
+}
 .order-div2-2-span {
   color: var(--red-color);
+  margin-right: 0.5rem;
 }
 .order-div2-2-img {
   border-radius: 1rem;
+}
+#order-btn3 {
+  display: flex;
+  margin-top: 1rem;
 }
 /*! Section headers */
 section {
@@ -149,6 +181,8 @@ section {
   display: flex;
   justify-content: center;
   padding-bottom: 1rem;
+  font-weight: bolder;
+  font-family: var(--barlow-font);
 }
 .nav-div2 {
   display: flex;
