--- a/pizza-project/src/Components/Success.css
+++ b/pizza-project/src/Components/Success.css
@@ -43,7 +43,7 @@ h2 {
   margin: 0 auto;
   padding-bottom: 3rem;
 }
-h4 {
+#user-info h4 {
   display: flex;
   width: 30%;
   justify-content: flex-end;
